--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     <main>
       <section class="jumbotron">
         <div class="container">
-          <div class="boxInfo ">
+          <div class="boxInfoHome">
             <div class="row">
               <div class="col-md-8">
                 <div class="info">
-                  <h1 class="title">VISA ARRIVAL VIETNAM</h1>
+                  <h1>VISA VIETNAM</h1>
                 </div>
               </div>
               <div class="col-md-4">
@@ -143,10 +143,10 @@
                 <div class="boxTitle">
                   <h5 class="name">EVisa Services</h5>
                   <ul class="info">
-                    <li>5 Years Visa Exemption</li>
-                    <li>Consular Legalization</li>
-                    <li>Notarized Translation</li>
-                    <li>Vietnam Passport</li>
+                    <li><a href="">5 Years Visa Exemption</a></li>
+                    <li><a href="">Consular Legalization</a></li>
+                    <li><a href="">Notarized Translation</a></li>
+                    <li><a href="">Vietnam Passport</a></li>
                   </ul>
                 </div>
               </div>
@@ -157,10 +157,10 @@
                 <div class="boxTitle">
                   <h5 class="name">EVisa Services</h5>
                   <ul class="info">
-                    <li>5 Years Visa Exemption</li>
-                    <li>Consular Legalization</li>
-                    <li>Notarized Translation</li>
-                    <li>Vietnam Passport</li>
+                    <li><a href="">5 Years Visa Exemption</a></li>
+                    <li><a href="">Consular Legalization</a></li>
+                    <li><a href="">Notarized Translation</a></li>
+                    <li><a href="">Vietnam Passport</a></li>
                   </ul>
                 </div>
               </div>
@@ -171,10 +171,10 @@
                 <div class="boxTitle">
                   <h5 class="name">EVisa Services</h5>
                   <ul class="info">
-                    <li>5 Years Visa Exemption</li>
-                    <li>Consular Legalization</li>
-                    <li>Notarized Translation</li>
-                    <li>Vietnam Passport</li>
+                    <li><a href="">5 Years Visa Exemption</a></li>
+                    <li><a href="">Consular Legalization</a></li>
+                    <li><a href="">Notarized Translation</a></li>
+                    <li><a href="">Vietnam Passport</a></li>
                   </ul>
                 </div>
               </div>
@@ -274,14 +274,12 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <div class="boxInfo">
-                <div class="info">
-                  <h2 class="title">ABOUT US</h2>
-                  <p>Simplify and guide you through the process of company incorporation and related administration</p>
-                  <p>Get your international business started in a blink of an eye with our experienced team of company experts</p>
-                  <p>Get your international business started in a blink of an eye with</p>
-                  <a class="btnLearnMore" href="">Learn more</a>
-                </div>
+              <div class="info">
+                <h2 class="title">ABOUT US</h2>
+                <p>Simplify and guide you through the process of company incorporation and related administration</p>
+                <p>Get your international business started in a blink of an eye with our experienced team of company experts</p>
+                <p>Get your international business started in a blink of an eye with</p>
+                <a class="btnLearnMore" href="">Learn more</a>
               </div>
             </div>
             <div class="col-md-6">
@@ -316,7 +314,7 @@
                         <li><i class="fa-solid fa-star"></i></li>
                         <li><i class="fa-solid fa-star-half-stroke"></i></li>
                       </ul>
-                      <div class="content">
+                      <div class="contentRating">
                         <i class="fa-solid fa-quote-left"></i>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         <i class="fa-solid fa-quote-right"></i>
@@ -340,7 +338,7 @@
                       <li><i class="fa-solid fa-star"></i></li>
                       <li><i class="fa-solid fa-star-half-stroke"></i></li>
                     </ul>
-                    <div class="content">
+                    <div class="contentRating">
                       <i class="fa-solid fa-quote-left"></i>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                       <i class="fa-solid fa-quote-right"></i>
