--- a/cancellation-policy.html
+++ b/cancellation-policy.html
@@ -226,6 +226,9 @@
                     </div>
                   </div>
                 </div>
+                <div class="col-md-4">
+                  <a href="#" class="btnContact">Contact Us</a>
+                </div>
               </div>
             </div>
           </div>
