--- a/fast-track.html
+++ b/fast-track.html
@@ -25,7 +25,7 @@
               <span class="email">Send us an email: <a href="#">abc@gmail.com</a></span>
             </div>
             <div class="float-end d-flex">
-              <div class="account">
+              <div class="account showLoginPage">
                 <i class="fa-solid fa-user"></i>
                 <div class="fullName">My account</div>
               </div>
@@ -47,7 +47,7 @@
             <div class="boxMenu">
               <ul class="menu">
                 <li class="item">
-                  <a href>Services <i class="fa-solid fa-chevron-down"></i></a>
+                  <a href><strong>Services <i class="fa-solid fa-chevron-down"></i></strong></a>
                   <ul class="subMenu">
                     <li><a href="">eVisa</a></li>
                     <li><a href="">Visa On Arrival (VOA)</a></li>
@@ -83,7 +83,7 @@
           <div class="float-end"><i class="fa-solid fa-bars" show="0"></i></div>
           <div class="boxMenuMobile transition">
             <div class="boxAccount clearfix">
-              <div class="account float-start">
+              <div class="account showLoginPage float-start">
                 <i class="fa-solid fa-user"></i>
                 <div class="fullName">My account</div>
               </div>
@@ -108,6 +108,127 @@
               <li class="item"><a href>FAQs</a></li>
               <li class="item"><a href>Resources</a></li>
             </ul>
+          </div>
+        </div>
+      </div>
+      <div class="signInPage">
+        <div class="container container-m">
+          <div class="boxSignIn">
+            <i class="fa-solid fa-xmark closeLoginPage"></i>
+            <div class="row">
+              <div class="col-md-5 d-none d-lg-none d-xl-block d-xxl-block">
+                  <img src="./public/image/signin.jpg" class="w-100" alt="">
+              </div>
+              <div class="col-md-7">
+                  <div class="boxTitle">
+                    <div class="tabs">
+                      <div tlt='signin' class="tab active">
+                        SIGN IN
+                      </div>
+                      <div tlt='signup' class="tab ">
+                        SIGN UP
+                      </div>
+                    </div>
+                  </div>
+                  <div class="signinTab">
+                    <h3>SIGN IN</h3>
+                    <div class="mb-2">
+                      <label for="" class="form-label"><strong>Email <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <div class="mb-2">
+                      <label for="" class="form-label"><strong>Password <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <button class="btnSubmit" type="submit">Log in</button>
+                    <div class="text-center"><span class="or">or</span></div>
+                    <button type="button" class="btnSocial"><img width="25px" src="./public/image/facebook.png" alt=""> Sign in with Facebook</button>
+                    <button type="button" class="btnSocial"><img width="25px" src="./public/image/google.png" alt=""> Sign in with Google </button>
+                    <button type="button" class="btnSocial"><img width="25px" src="./public/image/apple.png" alt=""> Sign in with Apple</button>
+                  </div>
+                  <div class="signupTab">
+                    <h3>SIGN UP</h3>
+                    <div class="mb-2">
+                      <label for="" class="form-label"><strong>Full name <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <div class="mb-2">
+                      <label for="" class="form-label"><strong>Email <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <div class="mb-2">
+                      <label for="" class="form-label"><strong>Phone<span style="color:red">*</span></strong></label>
+                        <div class="phoneBox">
+                          <div class="phoneBoxLeft">
+                            <select class="form-select form-select-lg" name="" id="">
+                              <option value="">+84</option>
+                              <option value="">Istanbul</option>
+                              <option value="">Jakarta</option>
+                            </select>
+                          </div>
+                          <div class="phoneBoxRight">
+                            <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                          </div>
+                        </div>
+                    </div>
+                    <div class="mb-2">
+                      <label for="" class="form-label"><strong>Password <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <div class="mb-2">
+                      <label for="" class="form-label"><strong>Captcha <span style="color:red">*</span></strong></label>
+                        <div class="phoneBox">
+                          <div class="phoneBoxLeft">
+                            <div class="capchar">1g43g24</div>
+                          </div>
+                          <div class="phoneBoxRight">
+                            <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                          </div>
+                        </div>
+                    </div>
+                    <button class="btnSubmit" type="submit">Create account</button>
+                  </div>
+
+
+                  <!-- <div class="boxPassword">
+                    <h3>DONE !</h3>
+                    <p>Enter the email you registered with and we'll send a link to reset the password</p>
+                    <button class="btnSubmit" type="submit">Sign in</button>
+                  </div>
+                  <div class="boxPassword">
+                    <h3>NEW password</h3>
+                    <p>Enter the email you registered with and we'll send a link to reset the password</p>
+                    <div class="mb-3">
+                      <label for="" class="form-label"><strong>Password <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <div class="mb-3">
+                      <label for="" class="form-label"><strong>Confirm Password <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <button class="btnSubmit" type="submit">Save password</button>
+                  </div>
+                  <div class="boxPassword">
+                    <h3>Forgot your password?</h3>
+                    <p>Enter the email you registered with and we'll send a link to reset the password</p>
+                    <div class="mb-3">
+                      <label for="" class="form-label"><strong>Email <span style="color:red">*</span></strong></label>
+                      <input type="text"
+                        class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                    </div>
+                    <button class="btnSubmit" type="submit">Send a link</button>
+                  </div> -->
+
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
